# noir

./: Cargo.toml
crates/noir_util_wasm/: Cargo.toml  README.md  build-noir-util-wasm
crates/noir_util_wasm/src/: lib.rs
crates/wasm_pwg/: Cargo.toml
crates/wasm_pwg/src/: lib.rs  serialiser.rs  structures.rs
crates/wasmify/: Cargo.toml
crates/wasmify/1/src/: main.nr
crates/wasmify/barretenberg.js/: bootstrap.sh  package.json
crates/wasmify/barretenberg.js-local/: .eslintrc.js  package.json
crates/wasmify/barretenberg.js-local/dest/: package.json  worker.js
crates/wasmify/barretenberg.js-local/dest/account_id/: account_id.d.ts  account_id.js  alias_hash.d.ts  alias_hash.d.ts.map  alias_hash.js  index.d.ts
crates/wasmify/barretenberg.js-local/dest/address/: eth_address.d.ts  eth_address.d.ts.map  grumpkin_address.js  index.d.ts
crates/wasmify/barretenberg.js-local/dest/asset/: index.d.ts  index.d.ts.map  index.js
crates/wasmify/barretenberg.js-local/dest/async_map/: index.d.ts  index.js
crates/wasmify/barretenberg.js-local/dest/bigint_buffer/: index.d.ts.map
crates/wasmify/barretenberg.js-local/dest/block_source/: defi_interaction_event.d.ts.map  index.d.ts  index.d.ts.map  server_block_source.js
crates/wasmify/barretenberg.js-local/dest/blockchain/: blockchain.d.ts.map  blockchain_status.d.ts  ethereum_provider.d.ts.map  ethereum_rpc.d.ts  ethereum_signer.d.ts  ethereum_signer.d.ts.map  index.d.ts  tx_hash.js
crates/wasmify/barretenberg.js-local/dest/bridge_id/: bit_config.d.ts  bit_config.js  bridge_id.js  bridge_id_config.d.ts  bridge_id_config.d.ts.map  bridge_id_config.js  validate_bridge_id.d.ts.map
crates/wasmify/barretenberg.js-local/dest/client_proofs/: index.d.ts
crates/wasmify/barretenberg.js-local/dest/crs/: index.js
crates/wasmify/barretenberg.js/dest/: worker.js
crates/wasmify/js_code/: dsl_prover.js  dsl_prover.ts  dsl_verifier.js  dsl_verifier.ts  index.js  index.ts  package-lock.json  package.json
crates/wasmify/src/: file_reader.rs  lib.rs
(+674 files in other folders)
